@@ -4,6 +4,7 @@
 	use Eina_Spinlock in Eina_Log, replace Eina_Lock by Eina_Spinlock in Eina_Stringshare,
 	Eina_Chained_Mempool.
 	* Eet: replace Eina_Lock by Eina_Spinlock in Eet_Dictionnary.
+	* Evas: replace Eina_Lock by Eina_Spinlock in Evas_ScaleCache, Evas_Async_Events and Image_Entry.
 
 2013-10-10  Carsten Haitzler (The Rasterman)
 
